Alterando as Perguntas da Cruzadinha

--- a/cruzadinha.html
+++ b/cruzadinha.html
@@ -76,22 +76,22 @@
         var special_words = ['CPU', 'ULA', 'REGISTRADORES', 'RAM', 'ROM', 'EPROM', 'FLASH', 'MEMÓRIA DE MASSA', 'DMA', 'CS', 'ADRESS BUS', 'DATA BUS', 'I5', 'I7', 'DUAL CORE', 'QUAD CORE'];
 
         var questions_list = [
-            'Qual é a sigla para Central Process Unit?',
-            'Um circuto digital que realiza operações lógicas e aritméticas. Qual é o nome deste componente?',
-            'Tipo de memória que se encontra no topo da hierarquia de memória',
-            'Tipo de memória volátil que tem como nome Random Acess Memory. Qual é a sigla deste componente?',
-            'Tipo de memória não volátil que oferece dados apenas para leitura',
-            'Tipo de memória não volátil que precisa ter seu chip exposto a luz ultravioleta para apagar seu conteúdo',
-            'Tipo particular de EEPROM que mantém as informações armazenadas sem a necessidade de uma fonte de energia elétrica',
-            'Tipo de memória que precisa ter seu conteúdo copiado na RAM para poder ser executado pela CPU',
-            'Permite que periféricos acessem diretamente a RAM sem ocupar processamento',
-            'Também conhecido como Slave Select (SS). Usado para selecionar um ou um conjunto de circuitos que estão conectados no computador',
-            'Grupo de linhas ou trilhas usadas para se referir a um endereço físico na memória. O número de trilhas determina a quantidade de endereços na memória física',
-            'Também chamado de Memory Bus. É responsável para carregar os dados.',
+            'Qual é a sigla do componente principal do Computador, responsável pela execução de tarefas e processamento de dados?',
+            'Uma das unidades da CPU, responsável por realizar operações lógicas e aritméticas. Qual é o nome deste componente?',
+            'Componentes que se encontram no topo da hierarquia das memórias dentro da CPU?',
+            'Qual a sigla da memória volátil responsável por armazenar dados temporários e instruções de processamento pela CPU?',
+            'Qual o tipo de memória que contém dados apenas para leitura, onde também se encontra a BIOS do Computador?',
+            'Tipo de memória não volátil que pode ter seus dados apagados por exposição à luz ultravioleta.',
+            'Tipo de memória semelhante a EEPROM, porém sem a necessidade de uma fonte elétrica para armazenar os dados.',
+            'Tipo de memória onde é armazenado um grande volume de dados para que possam ser processados pela CPU.',
+            'Permite que os dispositivos de entrada acessem a memória RAM sem a necessidade de serem processados pela CPU.',
+            'Sinal elétrico usado para selecionar um ou um conjunto de circuitos conectados ao Computador.',
+            'Conjunto de linhas de comunicação que transportam endereços de memória.',
+            'Conjunto de linhas que transportam dados entre a CPU e outros componentes, também chamado de Memory Bus.',
             'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em setembro de 2009',
             'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em novembro de 2008',
-            'Tipo de processador que possui dois processadores ou melhor dizendo ‘dois centros, núcleos ou cores de execução‘ no mesmo circuito integrado.  Cada core tem sua própria memória cash e controlador o que permite que funcione mais efetivamente do que um processador single',
-            'Segue o mesmo princípio de um dual-core, mas agora em teoria tem o dobro da capacidade de processamento'
+            'Tipo de processador que possui dois núcleos(cores) de processamento. Cada core tem sua própria memória cache e controlador o que permite que funcione mais efetivamente do que um processador single',
+            'Semelhante ao Dual-Core, mas, teoricamente, com o dobro da capacidade de processamento.'
         ];
 
         var filledCell = [2, 20, 38, 133, 134, 135, 59, 77, 95, 113, 131, 149,
@@ -361,48 +361,63 @@
 
             if (cont_correctAnswer == 1) {
                 word.word1.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 2) {
                 word.word2.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 3) {
                 word.word3.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 4) {
                 word.word4.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 5) {
                 word.word5.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 6) {
                 word.word6.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 7) {
                 word.word7.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 8) {
                 word.word8.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 9) {
                 word.word9.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 10) {
                 word.word10.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 11) {
                 word.word11.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 12) {
                 word.word12.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 13) {
                 word.word13.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 14) {
                 word.word14.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 15) {
                 word.word15.write();
+                input_answer.focus();
             }
             else if (cont_correctAnswer == 16) {
                 word.word16.write();
